[gd_scene load_steps=8 format=3 uid="uid://d2qdyo0cg1vov"]

[ext_resource type="Script" path="res://game parts/character/test_characeter.gd" id="1_74jxo"]
[ext_resource type="Shader" path="res://game parts/character/Test_shader.gdshader" id="2_jiupr"]
[ext_resource type="Texture2D" uid="uid://dv8308hh1p71v" path="res://game parts/character/sprites/export202410062032381110.png" id="3_bukxd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6rqbv"]
shader = ExtResource("2_jiupr")
shader_parameter/new_color = Color(0, 0, 0, 1)
shader_parameter/threshold = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_x55n6"]
atlas = ExtResource("3_bukxd")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcm6a"]
atlas = ExtResource("3_bukxd")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwjk0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x55n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcm6a")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[node name="Character" type="Node2D"]
script = ExtResource("1_74jxo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_6rqbv")
position = Vector2(8, -22)
sprite_frames = SubResource("SpriteFrames_jwjk0")
animation = &"idle"

[node name="Random_Timer" type="Timer" parent="."]

[node name="Inactivity_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="movement_finished" from="." to="." method="_on_movement_finished"]
[connection signal="movement_finished_internal" from="." to="." method="_on_movement_finished_internal"]
[connection signal="timeout" from="Random_Timer" to="." method="_on_random_timer_timeout"]
[connection signal="timeout" from="Inactivity_Timer" to="." method="_on_incativity_timer_timeout"]
